# matscan

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml.example  example-config.toml  exclude.conf
.github/: FUNDING.yml
.github/workflows/: compile.yml
benches/: my_benchmark.rs
migrations/: 20250824040242_init.down.sql  20250824040242_init.up.sql  20250913024104_indexes.down.sql  20250913024104_indexes.up.sql  20250913210747_uint.sql
src/: asns.rs  config.rs  database.rs  exclude.rs  lib.rs  main.rs  modes.rs  processing.rs  strategies.rs  terminal_colors.rs  tracing.rs
src/database/: bulk_write.rs  collect_servers.rs  migrate_mongo_to_postgres.rs  mod.rs
src/modes/: fingerprint.rs  rescan.rs  slash0.rs  slash0_few_ports.rs  slash0_filtered_by_asn.rs  slash0_filtered_by_asn_but_less.rs  slash0_filtered_by_slash24.rs  slash0_filtered_by_slash24_30d.rs  slash0_filtered_by_slash24_new.rs  slash0_filtered_by_slash24_top_1024_ports_uniform.rs  slash0_filtered_by_slash24_top_ports_weighted.rs  slash24.rs  slash24_all_ports.rs  slash24_all_ports_but_less.rs  slash24_all_ports_new.rs  slash24_few_ports.rs  slash24_few_ports_new.rs  slash24_new.rs  slash32.rs  slash32_all_ports.rs  slash32_all_ports_365d.rs  slash32_all_ports_new.rs  slash32_range_ports.rs  slash32_range_ports_new.rs
src/net/: fingerprint.rs  mod.rs  raw_sockets.rs  tcp.rs  tcp_template.rs
src/processing/: minecraft.rs  minecraft_fingerprinting.rs
src/processing/minecraft/: anti_abuse.rs  mod.rs  passive_fingerprint.rs  snipe.rs
src/scanner/: mod.rs  protocols.rs  targets.rs  throttle.rs
src/scanner/protocols/: minecraft.rs  minecraft_fingerprinting.rs
src/strategies/: fingerprint.rs  rescan.rs  slash0.rs  slash16_a.rs  slash16_b.rs  slash24_a.rs  slash24_b.rs  slash24_c.rs  slash32.rs
