[package]
name = "matscan"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azalea-chat = { git = "https://github.com/azalea-rs/azalea", default-features = false }
bson = "3.0.0"
default-net = "0.22.0"
dotenv = "0.15.0"
libc = "0.2.175"
perfect_rand = "0.3.0"
pnet = "0.35.0"
pnet_macros = "0.35.0"
pnet_macros_support = "0.35.0"
rand = "0.9.2"
regex = "1.11.2"
serde = "1.0.219"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["rt"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
futures-util = "0.3.31"
lru-cache = "0.1.2"
toml = "0.9.5"
reqwest = { version = "0.12.23", default-features = false, features = [
    "json",
    "rustls-tls",
] }
parking_lot = "0.12.4"
enum-utils = "0.1.2"
flate2 = "1.1.2"
tracing-appender = "0.2.3"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "tls-rustls", "chrono", "uuid"] }
rustc-hash = "2.1.1"
mongodb = "3.3.0"
eyre = "0.6.12"
uuid = "1.18.1"
chrono = "0.4.41"
simd-json = "0.15.1"
sha2 = "0.10.9"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

# [profile.release]
# debug = true

[features]
benchmark = []

[[bench]]
name = "my_benchmark"
harness = false
